[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "examples",
]

[workspace.package]
repository = "https://github.com/rationalintelligence/uiio"
version = "0.0.3"
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
